# crud_api_products

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  crud.py  database.py  main.py  models.py  router.py  schema.py
frontend/: Dockerfile  app.py
frontend/.streamlit/: config.toml
