[tool.poetry]
name = "crud-api-products"
version = "0.1.0"
description = ""
authors = ["Nicolas Doege <github.repsu@passinbox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.1.0"
sqlalchemy = "^2.0.38"
pydantic = {extras = ["email"], version = "^2.10.6"}
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
